# ASAPQuery

./: .gitignore  .pre-commit-config.yaml  .shellcheckrc  Cargo.toml  LICENSE  README.md  gwt.sh
asap-common/dependencies/rs/asap_types/: Cargo.toml
asap-common/dependencies/rs/asap_types/src/: aggregation_config.rs  aggregation_reference.rs  capability_matching.rs  enums.rs  inference_config.rs  lib.rs  query_requirements.rs  streaming_config.rs  traits.rs
asap-common/dependencies/rs/promql_utilities/: Cargo.toml
asap-common/dependencies/rs/sketch_db_common/: Cargo.toml
asap-common/dependencies/rs/sketch_db_common/src/: aggregation_config.rs  capability_matching.rs  enums.rs  inference_config.rs  lib.rs  query_config.rs  streaming_config.rs
asap-common/dependencies/rs/sql_utilities/: Cargo.toml
asap-common/sketch-core/: Cargo.toml  report.md
asap-common/sketch-core/src/: config.rs  count_min.rs  count_min_sketchlib.rs  count_min_with_heap.rs  count_min_with_heap_sketchlib.rs  hydra_kll.rs  kll.rs  kll_sketchlib.rs  lib.rs
asap-common/tests/rust_pattern_matching/: Cargo.toml
asap-common/tests/rust_pattern_matching/src/: main.rs
asap-planner-rs/: Cargo.toml  Dockerfile  docker-compose.yml.j2
asap-planner-rs/installation/: install.sh
asap-planner-rs/src/: error.rs  lib.rs  main.rs  prometheus_client.rs
asap-planner-rs/src/config/: input.rs
asap-planner-rs/src/output/: generator.rs  mod.rs  sql_generator.rs
asap-planner-rs/src/planner/: logics.rs  mod.rs  patterns.rs  single_query.rs  sql_single_query.rs
asap-planner-rs/src/query_log/: converter.rs  frequency.rs  mod.rs  parser.rs
asap-planner-rs/tests/: integration.rs  sql_integration.rs
asap-planner-rs/tests/comparison/: comparator.py  master_test_runner.py  python_runner.py  test_cases.json
asap-planner-rs/tests/comparison/test_data/configs/: binary_arithmetic.yaml  binary_arithmetic_dedup.yaml  binary_arithmetic_nested.yaml  binary_arithmetic_non_acceleratable.yaml  binary_arithmetic_scalar.yaml  cleanup_circular.yaml  cleanup_read_based.yaml  deduplicated.yaml  increase.yaml  mixed_workload.yaml  quantile_over_time.yaml  range_query.yaml  spatial_quantile.yaml  sum_by.yaml  sum_by_overlapping.yaml  sum_over_time.yaml  temporal_overlapping.yaml  topk.yaml
asap-planner-rs/tests/comparison/test_data/metrics/: http_requests.yaml
asap-query-engine/: Cargo.toml  Dockerfile  docker-compose.yml.j2
asap-query-engine/benches/: simple_map_store_benchmark.rs  simple_store_bench.rs
asap-query-engine/docs/: promsketch-integration.md  simple_store_insert_profile.md
asap-query-engine/examples/promql/: streaming_config.yaml
asap-query-engine/examples/sql/: inference_config.yaml  streaming_config.yaml
asap-query-engine/installation/: install.sh  setup_dependencies.sh
asap-query-engine/src/: lib.rs  main.rs  planner_client.rs
asap-query-engine/src/data_model/: aggregation_config.rs  aggregation_reference.rs  enums.rs  inference_config.rs  precomputed_output.rs  promql_schema.rs  query_config.rs  streaming_config.rs  traits.rs
asap-query-engine/src/drivers/: mod.rs
asap-query-engine/src/drivers/ingest/: kafka.rs  mod.rs  otel.rs  prometheus_remote_write.rs  victoriametrics_remote_write.rs
asap-query-engine/src/drivers/query/adapters/: clickhouse_http.rs  config.rs  elastic_http.rs  factory.rs  traits.rs
asap-query-engine/src/drivers/query/fallback/: elastic.rs
asap-query-engine/src/drivers/query/servers/: http.rs
asap-query-engine/src/engines/: main.rs  query_result.rs  simple_engine.rs  window_merger.rs
asap-query-engine/src/engines/logical/: plan_builder.rs
asap-query-engine/src/engines/physical/: accumulator_serde.rs  conversion.rs  mod.rs  planner.rs  summary_merge_multiple_exec.rs
asap-query-engine/src/engines/simple_engine/: elastic.rs  mod.rs  promql.rs  sql.rs
asap-query-engine/src/precompute_engine/: accumulator_factory.rs  config.rs  engine.rs  ingest_handler.rs  mod.rs  output_sink.rs  precompute_engine_design_doc.md  series_buffer.rs  series_router.rs  window_manager.rs  worker.rs
asap-query-engine/src/precompute_operators/: count_min_sketch_accumulator.rs  count_min_sketch_with_heap_accumulator.rs  datasketches_kll_accumulator.rs  delta_set_aggregator_accumulator.rs  hydra_kll_accumulator.rs  increase_accumulator.rs  min_max_accumulator.rs  multiple_increase_accumulator.rs  multiple_min_max_accumulator.rs  multiple_sum_accumulator.rs  set_aggregator_accumulator.rs  sum_accumulator.rs
asap-query-engine/src/query_tracker/: mod.rs  tracker.rs
asap-query-engine/src/stores/: mod.rs  traits.rs
asap-query-engine/src/stores/promsketch_store/: config.rs  metrics.rs  query.rs  series.rs  store.rs
asap-query-engine/src/stores/simple_map_store/: INDEX_DESIGN.md  common.rs  global.rs  mod.rs  per_key.rs  per_key_legacy.rs
asap-query-engine/src/stores/simple_map_store/legacy/: global.rs  mod.rs  per_key.rs
asap-query-engine/src/tests/: capability_matching_tests.rs  clickhouse_forwarding_tests.rs  elastic_dsl_query_tests.rs  elastic_forwarding_tests.rs  elastic_query_tests.rs  mod.rs  prometheus_forwarding_tests.rs  query_equivalence_tests.rs  sql_pattern_matching_tests.rs  store_correctness_tests.rs
asap-query-engine/src/tests/datafusion/: accumulator_serde_tests.rs  dispatch_arithmetic_tests.rs  mod.rs  plan_builder_binary_tests.rs  plan_builder_regression_tests.rs  plan_execution_arithmetic_tests.rs  plan_execution_dual_input_tests.rs  plan_execution_temporal_tests.rs  plan_execution_tests.rs  structural_matching_tests.rs
asap-query-engine/src/tests/test_utilities/: comparison.rs  config_builders.rs  engine_factories.rs  mod.rs
asap-query-engine/src/utils/: file_io.rs  promql.rs
asap-query-engine/tests/: e2e_precompute_equivalence.rs  test_both_backends.rs
asap-tools/data-sources/otlp-exporters/: Cargo.toml
asap-tools/data-sources/otlp-exporters/src/: main.rs
asap-tools/execution-utilities/clickhouse-benchmark-pipeline/data_exporter/: Cargo.toml
asap-tools/execution-utilities/clickhouse-benchmark-pipeline/data_exporter/src/: main.rs
(+359 files in other folders)
