[workspace]
resolver = "2"
members = [
    "asap-common/sketch-core",
    "asap-common/dependencies/rs/promql_utilities",
    "asap-common/dependencies/rs/sql_utilities",
    "asap-common/dependencies/rs/elastic_dsl_utilities",
    "asap-common/dependencies/rs/sketch_db_common",
    "asap-common/dependencies/rs/datafusion_summary_library",
    "asap-common/tests/compare_matched_tokens/rust_tests",
    "asap-common/tests/compare_patterns",
    "asap-query-engine",
    "asap-planner-rs",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# Shared external deps (used by 2+ crates)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
promql-parser = "0.5.0"
tokio = { version = "1.0", features = ["full"] }

# Internal crates
sketch-core = { path = "asap-common/sketch-core" }
promql_utilities = { path = "asap-common/dependencies/rs/promql_utilities" }
sql_utilities = { path = "asap-common/dependencies/rs/sql_utilities" }
sketch_db_common = { path = "asap-common/dependencies/rs/sketch_db_common" }
datafusion_summary_library = { path = "asap-common/dependencies/rs/datafusion_summary_library" }
elastic_dsl_utilities = { path = "asap-common/dependencies/rs/elastic_dsl_utilities" }
asap_planner = { path = "asap-planner-rs" }
indexmap = { version = "2.0", features = ["serde"] }
