[package]
name = "asap_planner"
version.workspace = true
edition.workspace = true

[lib]
name = "asap_planner"
path = "src/lib.rs"

[[bin]]
name = "asap-planner"
path = "src/main.rs"

[dependencies]
sketch_db_common.workspace = true
promql_utilities.workspace = true
sql_utilities.workspace = true
sqlparser = "0.59.0"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
indexmap.workspace = true
chrono.workspace = true
promql-parser = "0.5.0"

[dev-dependencies]
tempfile = "3.20"
pretty_assertions = "1.4"
