[package]
name = "query_engine_rust"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal crates (workspace)
sketch-core.workspace = true
promql_utilities.workspace = true
sql_utilities.workspace = true
sketch_db_common.workspace = true
datafusion_summary_library.workspace = true

# Shared external (workspace)
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
promql-parser.workspace = true
tokio.workspace = true

# Crate-specific (keep version pinned here)
form_urlencoded = "1.2"
rmp-serde = "1.1"
axum = "0.7"
rdkafka = "0.34"
rusqlite = { version = "0.31", features = ["bundled"] }
bincode = "1.3"
dashmap = "5.5"
uuid = { version = "1.0", features = ["v4"] }
structopt = "0.3"
urlencoding = "2.1"
flate2 = "1.0"
async-trait = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64"] }
dsrs = { git = "https://github.com/ProjectASAP/datasketches-rs", rev = "d748ec75c80fff21f7b24897244dd1c895df2e9a" }
base64 = "0.21"
hex = "0.4"
sqlparser = "0.59.0"
datafusion = "43"
arrow = "53.4.1"
futures = "0.3"
prost = "0.13"
opentelemetry-proto = { version = "0.28", features = ["gen-tonic", "gen-tonic-messages", "metrics"] }
tonic = "0.12"
tokio-stream = "0.1"
snap = "1"
regex = "1"
prometheus = "0.13"
lazy_static = "1.4"
zstd = "0.13"
reqwest = { version = "0.11", features = ["json"] }
tracing-appender = "0.2"
elastic_dsl_utilities.workspace = true
sketchlib-rust = { git = "https://github.com/ProjectASAP/sketchlib-rust", rev = "440427438fdaf3ac2298b53ee148f9e12a64ffcc" }

[[bin]]
name = "precompute_engine"
path = "src/bin/precompute_engine.rs"

[dev-dependencies]
ctor = "0.2"
tempfile = "3.20.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "simple_store_bench"
harness = false

[features]
#default = ["lock_profiling", "extra_debugging"]
default = []
# Enable lock profiling instrumentation
lock_profiling = []
# Enable extra debugging output
extra_debugging = []
sketchlib-tests = []
