[package]
name = "query_engine_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
sketch-core = { path = "../asap-common/sketch-core" }
form_urlencoded = "1.2"
promql_utilities = { path = "../asap-common/dependencies/rs/promql_utilities" }
sql_utilities = { path = "../asap-common/dependencies/rs/sql_utilities" }
sketch_db_common = { path = "../asap-common/dependencies/rs/sketch_db_common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rmp-serde = "1.1"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
rdkafka = "0.34"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "1.0"
anyhow = "1.0"
bincode = "1.3"
dashmap = "5.5"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.3"
urlencoding = "2.1"
flate2 = "1.0"
async-trait = "0.1"
promql-parser = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64"] }
dsrs = { git = "https://github.com/ProjectASAP/datasketches-rs" }
sketchlib-rust = { git = "https://github.com/ProjectASAP/sketchlib-rust" }
base64 = "0.21"
hex = "0.4"
sqlparser = "0.59.0"
datafusion = "43"
arrow = "53.4.1"
datafusion_summary_library = { path = "../asap-common/dependencies/rs/datafusion_summary_library" }
futures = "0.3"
prost = "0.13"
snap = "1"
regex = "1"
prometheus = "0.13"
lazy_static = "1.4"
zstd = "0.13"

[[bin]]
name = "precompute_engine"
path = "src/bin/precompute_engine.rs"

[[bin]]
name = "test_e2e_precompute"
path = "src/bin/test_e2e_precompute.rs"

[dev-dependencies]
tempfile = "3.20.0"

[features]
#default = ["lock_profiling", "extra_debugging"]
default = []
# Enable lock profiling instrumentation
lock_profiling = []
# Enable extra debugging output
extra_debugging = []
