[package]
name = "sketch-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
# sketch-core-specific, keep pinned
rmp-serde = "1.1"
xxhash-rust = { version = "0.8", features = ["xxh32"] }
dsrs = { git = "https://github.com/ProjectASAP/datasketches-rs", rev = "d748ec75c80fff21f7b24897244dd1c895df2e9a" }
asap_sketchlib = { git = "https://github.com/ProjectASAP/asap_sketchlib", rev = "fcc8992299d7a43eecd75fd7bfc715188a8ee412" }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
ctor = "0.2"
