[package]
name = "promql_pattern_matching_tests"
version.workspace = true
edition.workspace = true

[[bin]]
name = "test_runner"
path = "src/main.rs"

[dependencies]
promql-parser.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
promql_utilities.workspace = true
