[package]
name = "asap_types"
version.workspace = true
edition.workspace = true

[dependencies]
promql_utilities.workspace = true
tracing.workspace = true
sql_utilities.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
clap.workspace = true
