[package]
name = "promql_utilities"
version.workspace = true
edition.workspace = true
authors = ["SketchDB Team"]
description = "A standalone PromQL pattern matching and query analysis library for Rust"
license = "MIT"
keywords = ["prometheus", "promql", "pattern-matching", "query-analysis"]
categories = ["parsing", "database", "development-tools"]

[dependencies]
promql-parser.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test = "0.4"
