[package]
name = "sketch_db_common"
version.workspace = true
edition.workspace = true

[dependencies]
promql_utilities.workspace = true
tracing.workspace = true
sql_utilities.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
clap.workspace = true
