[package]
name = "sql_utilities"
version.workspace = true
edition.workspace = true
authors = ["SketchDB Team"]
description = "A standalone SQL pattern matching and query analysis library for Rust"
license = "MIT"
keywords = ["Clickhouse", "sql", "pattern-matching", "query-analysis"]
categories = ["parsing", "database", "development-tools"]

[dependencies]
chrono.workspace = true
# These are sql_utilities-specific, keep pinned
parse_datetime = "0.13.3"
sqlparser = "0.59.0"

[dev-dependencies]
tokio-test = "0.4"
