[package]
name = "data_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
csv = "1.3"
flate2 = "1"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
futures = "0.3"
indicatif = "0.17"

# Elasticsearch support
elasticsearch = "8.5.0-alpha.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1